--- a/src/components/advertising.css
+++ b/src/components/advertising.css
@@ -1,9 +1,4 @@
 /* Advertising rules */
-
-.ssi-logo {
-  height: 65px;
-}
-
 .nitrox-logo {
   height: 75px;
 }
@@ -11,5 +6,3 @@
 .adopt-dive-site {
   height: 150px;
 }
-
-.social-icons {}
